--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,50 +1,39 @@
 version: '3'
 
 services:
-  frontend:
+  web:
+    container_name: tududone-web
     build:
       context: .
       dockerfile: Dockerfile
     restart: always
-    environment:
-      - NODE_ENV=production
-      - NEXT_PUBLIC_STRAPI_URL=https://tududone.com/api
     ports:
       - "3000:3000"
-    depends_on:
-      - strapi
-    networks:
-      - tududone_network
-    healthcheck:
-      test: ["CMD", "wget", "--spider", "http://localhost:3000"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-
-  strapi:
-    image: strapi/strapi:latest
-    restart: always
     environment:
       - NODE_ENV=production
-      - DATABASE_CLIENT=sqlite
-      - DATABASE_FILENAME=.tmp/data.db
-      - ADMIN_JWT_SECRET=${ADMIN_JWT_SECRET}
-      - JWT_SECRET=${JWT_SECRET}
+      - NEXT_PUBLIC_SITE_URL=https://tududone.com
     volumes:
-      - ./my-blog-backend:/srv/app
-      - strapi-data:/srv/app/.tmp
+      - .:/app
+      - /app/node_modules
+      - /app/.next
+
+  nginx:
+    container_name: nginx
+    image: nginx:alpine
     ports:
-      - "1337:1337"
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - /etc/letsencrypt:/etc/letsencrypt:ro
+    depends_on:
+      - web
     networks:
-      - tududone_network
-    healthcheck:
-      test: ["CMD", "wget", "--spider", "http://localhost:1337/admin"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+      - app_network
+    restart: always
 
 networks:
-  tududone_network:
+  app_network:
     driver: bridge
 
 volumes:
