--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "solid-nextjs",
-  "version": "0.2.0",
+  "name": "tududone-solid",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,16 +10,12 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
-    "@types/bcrypt": "^5.0.1",
-    "@types/node": "^20.8.9",
-    "@types/react": "^18.2.32",
     "@types/react-dom": "^18.2.14",
     "autoprefixer": "^10.4.16",
-    "axios": "^1.7.9",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "framer-motion": "^10.12.16",
-    "next": "^13.5.6",
+    "next": "^15.1.6",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
@@ -29,13 +25,14 @@
     "react-hot-toast": "^2.4.1",
     "sharp": "^0.33.5",
     "swiper": "^9.4.1",
-    "tailwindcss": "^3.3.5",
-    "typescript": "^5.2.2"
+    "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
-    "@types/axios": "^0.9.36",
+    "@types/node": "^22.10.10",
+    "@types/react": "^19.0.8",
     "@types/react-google-recaptcha": "^2.1.9",
     "@types/swiper": "^5.4.3",
-    "prettier-plugin-tailwindcss": "^0.6.9"
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "typescript": "^5.7.3"
   }
 }
